[package]
name = "learning-rust"
version = "0.1.0"
authors = ["Timothy Herchen <timothy.herchen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
target-cpu = "native"

[profile.release]
target-cpu = "native"
opt-level = 3

[dependencies]
